with_gpu.err
module: unloading 'cuda/12.2.2'
module: loading 'cuda/12.2.2'
module: cuda: To use: module load gcc/10.2
module: unloading 'gcc/10.2'
module: loading 'gcc/10.2'
module: gcc: "Note: loading the gcc module overrides the gcc version on the system.  If you want to revert to the version of gcc provided by the OS, unload the gcc module."
experiments.cu(122): error: identifier "i" is undefined
      myfile << "    " << N[i] << " & " << M[i] << " & " << numStreams[i] << " & " << executionTime[i] << " & " << flopRate[i] << " \\\\\n";
                            ^

1 error detected in the compilation of "experiments.cu".
SKIPPED: /oscar/home/nxu4/apma2822/hw4_apma2822B_vignesh_neil/outputs/gpu_report_no_warp.sqlite does not contain NV Tools Extension (NVTX) data.
SKIPPED: /oscar/home/nxu4/apma2822/hw4_apma2822B_vignesh_neil/outputs/gpu_report_no_warp.sqlite does not contain CUDA trace data.
SKIPPED: /oscar/home/nxu4/apma2822/hw4_apma2822B_vignesh_neil/outputs/gpu_report_no_warp.sqlite does not contain CUDA kernel data.
SKIPPED: /oscar/home/nxu4/apma2822/hw4_apma2822B_vignesh_neil/outputs/gpu_report_no_warp.sqlite does not contain GPU memory data.
SKIPPED: /oscar/home/nxu4/apma2822/hw4_apma2822B_vignesh_neil/outputs/gpu_report_no_warp.sqlite does not contain GPU memory data.
